@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-12T08:13:12Z",
-  "count_outdated" : 328,
-  "uniques_outdated" : 175,
-  "count" : 356,
-  "uniques" : 192,
+  "timestamp" : "2022-06-12T16:14:25Z",
+  "count_outdated" : 330,
+  "uniques_outdated" : 176,
+  "count" : 358,
+  "uniques" : 193,
   "clones" : [
-    {
-      "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 2,
@@ -100,6 +93,13 @@
       "timestamp": "2022-06-11T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
